tdf#135495 builder file format has annoyingly escaped into user config

Change-Id: I38882e2c6e1815ac5fd747642c8934e3e4ca3ffb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100438
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>